k8s/7disk-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disk-pod
  labels:
    disk: private
  namespace: private-disk
spec:
  replicas: 3
  selector:
    matchLabels:
      disk: private
  template:
    metadata:
      labels:
        disk: private
    spec:
      imagePullSecrets:
      - name: disk-secret
      containers:
      - image: registry.cn-chengdu.aliyuncs.com/wangyunan_images/private-network-disk:v6
        name: web-disk
        ports:
        - name: disk-port
          containerPort: 8989
        resources:
          requests:
            cpu: 1000m
            memory: 2048Mi
          limits:
            cpu: 2000m
            memory: 4096Mi
        volumeMounts:
          - name: disk-mount
            mountPath: /go/src/my-network-disk
      volumes:
        - name: disk-mount
          # hostPath:
            # 挂载到本地路径后，需要把项目导入到本地路径里面去，否则pod会创建失败
            # path: /go/src/my-network-disk
          persistentVolumeClaim:
            # 如果映射的是项目启动目录，需要在nfs pod创建好后手动把数据导入到指定的nfs存储目录里面
            claimName: storage-class-disk-pvc
---
apiVersion: v1
kind: Service
metadata:
  # 这里的service name需要填在ingress.yaml中的service name里。
  name: disk-svc
  namespace: private-disk
spec:
  selector:
    disk: private
  ports:
  - name: http
    port: 8989
    targetPort: 8989
