k8s/8service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-disksvc
  namespace: private-disk
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 8989
      targetPort: 8989
      protocol: TCP
      nodePort: 30088
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
      nodePort: 30888
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
